{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 164,
  "lineage": "195fad57-cfff-34db-b795-2eaac773de9b",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_private_instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db6c6238a40c0681",
            "arn": "arn:aws:ec2:us-east-1:549815925956:instance/i-09cef3d815ca0d64c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09cef3d815ca0d64c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-hello-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-018d7670bfd7748ec",
            "private_dns": "ip-10-0-2-73.ec2.internal",
            "private_ip": "10.0.2.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-092105e88fc64ec0b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0833afa9161c6793a",
            "tags": {
              "Name": "app-private-instance1"
            },
            "tags_all": {
              "Name": "app-private-instance1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09400b17f2ca2a5b7"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.private_subnet1",
            "module.network.aws_vpc.main",
            "module.instances.aws_key_pair.instance_key",
            "module.instances.data.aws_ami.ubuntu",
            "module.network.aws_security_group.private_http_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_public_instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db6c6238a40c0681",
            "arn": "arn:aws:ec2:us-east-1:549815925956:instance/i-03d7b1d39fe2e5889",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03d7b1d39fe2e5889",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-hello-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05cde004c21b28e2b",
            "private_dns": "ip-10-0-1-155.ec2.internal",
            "private_ip": "10.0.1.155",
            "public_ip": "35.170.71.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0211f6cb8795ffbed",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eb04213026b42bce",
            "tags": {
              "Name": "app-instance1"
            },
            "tags_all": {
              "Name": "app-instance1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c7d4a570559a1b2e"
            ]
          },
          "dependencies": [
            "module.instances.data.aws_ami.ubuntu",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_security_group.alb_default_sec_grp",
            "module.network.aws_security_group.default_http_ssh",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_vpc.main",
            "module.instances.aws_key_pair.instance_key"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_public_instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db6c6238a40c0681",
            "arn": "arn:aws:ec2:us-east-1:549815925956:instance/i-01b9194fa6823f8b8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b9194fa6823f8b8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-hello-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08df0dcdd7b7eb36a",
            "private_dns": "ip-10-0-3-11.ec2.internal",
            "private_ip": "10.0.3.11",
            "public_ip": "3.89.90.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00cfa98f11e064f63",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e2558f3b1cfa429",
            "tags": {
              "Name": "app-instance2"
            },
            "tags_all": {
              "Name": "app-instance2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c7d4a570559a1b2e"
            ]
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.instances.aws_key_pair.instance_key",
            "module.instances.data.aws_ami.ubuntu",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_security_group.alb_default_sec_grp",
            "module.network.aws_security_group.default_http_ssh",
            "module.network.aws_subnet.public_subnet2"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db6c6238a40c0681",
            "arn": "arn:aws:ec2:us-east-1:549815925956:instance/i-06a2a3b97278b83c2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a2a3b97278b83c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-hello-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0eb4199e6dad465ed",
            "private_dns": "ip-10-0-1-194.ec2.internal",
            "private_ip": "10.0.1.194",
            "public_ip": "3.221.159.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09837289fd67ab9e7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eb04213026b42bce",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c7d4a570559a1b2e"
            ]
          },
          "dependencies": [
            "module.instances.aws_key_pair.instance_key",
            "module.instances.data.aws_ami.ubuntu",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_security_group.alb_default_sec_grp",
            "module.network.aws_security_group.default_http_ssh",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:loadbalancer/app/terraform-hello-main-alb/f9d439a137f7094d",
            "arn_suffix": "app/terraform-hello-main-alb/f9d439a137f7094d",
            "dns_name": "terraform-hello-main-alb-404336433.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:549815925956:loadbalancer/app/terraform-hello-main-alb/f9d439a137f7094d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-hello-main-alb",
            "security_groups": [
              "sg-0b88003c6dc90725d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06e2558f3b1cfa429"
              },
              {
                "subnet_id": "subnet-0eb04213026b42bce"
              }
            ],
            "subnets": [
              "subnet-06e2558f3b1cfa429",
              "subnet-0eb04213026b42bce"
            ],
            "tags": {
              "Name": "terraform-hello-main-alb"
            },
            "tags_all": {
              "Name": "terraform-hello-main-alb"
            },
            "vpc_id": "vpc-01de855f60a41bce2",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_security_group.alb_default_sec_grp",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_subnet.public_subnet2"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:listener/app/terraform-hello-main-alb/f9d439a137f7094d/99e14e7518ce8394",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/43efa2fe5e4dab00",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:549815925956:listener/app/terraform-hello-main-alb/f9d439a137f7094d/99e14e7518ce8394",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:loadbalancer/app/terraform-hello-main-alb/f9d439a137f7094d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.public_subnet2",
            "module.network.aws_vpc.main",
            "module.load_balancers.aws_lb.main",
            "module.load_balancers.aws_lb_target_group.target_group_app1",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_security_group.alb_default_sec_grp",
            "module.network.aws_subnet.public_subnet1"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/43efa2fe5e4dab00",
            "arn_suffix": "targetgroup/terraform-hello-app1/43efa2fe5e4dab00",
            "deregistration_delay": 1800,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/43efa2fe5e4dab00",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform-hello-app1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01de855f60a41bce2"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "targets_app1_target1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/43efa2fe5e4dab00-20210531073852050700000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/43efa2fe5e4dab00",
            "target_id": "i-03d7b1d39fe2e5889"
          },
          "dependencies": [
            "module.instances.aws_instance.app_public_instance1",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_security_group.alb_default_sec_grp",
            "module.network.aws_security_group.default_http_ssh",
            "module.network.aws_vpc.main",
            "module.instances.aws_key_pair.instance_key",
            "module.instances.data.aws_ami.ubuntu",
            "module.load_balancers.aws_lb_target_group.target_group_app1",
            "module.network.aws_subnet.public_subnet1"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancers",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "targets_app1_target2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/43efa2fe5e4dab00-20210531073852050900000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:549815925956:targetgroup/terraform-hello-app1/43efa2fe5e4dab00",
            "target_id": "i-01b9194fa6823f8b8"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_security_group.default_http_ssh",
            "module.network.aws_subnet.public_subnet2",
            "module.network.aws_vpc.main",
            "module.instances.aws_instance.app_public_instance2",
            "module.instances.aws_key_pair.instance_key",
            "module.instances.data.aws_ami.ubuntu",
            "module.load_balancers.aws_lb_target_group.target_group_app1",
            "module.network.aws_security_group.alb_default_sec_grp"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-082be7447ee4b4c33",
            "domain": "vpc",
            "id": "eipalloc-02625290a4d7eb00e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bc5519af38aaaa2d",
            "private_dns": "ip-10-0-1-84.ec2.internal",
            "private_ip": "10.0.1.84",
            "public_dns": "ec2-107-20-8-61.compute-1.amazonaws.com",
            "public_ip": "107.20.8.61",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "-ngw-eip"
            },
            "tags_all": {
              "Name": "-ngw-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:internet-gateway/igw-0e3024a428f072dfe",
            "id": "igw-0e3024a428f072dfe",
            "owner_id": "549815925956",
            "tags": {
              "Name": "-igw"
            },
            "tags_all": {
              "Name": "-igw"
            },
            "vpc_id": "vpc-01de855f60a41bce2"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02625290a4d7eb00e",
            "id": "nat-04bd2940fe9ca0d29",
            "network_interface_id": "eni-0bc5519af38aaaa2d",
            "private_ip": "10.0.1.84",
            "public_ip": "107.20.8.61",
            "subnet_id": "subnet-0eb04213026b42bce",
            "tags": {
              "Name": "-ngw"
            },
            "tags_all": {
              "Name": "-ngw"
            }
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public_subnet1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:route-table/rtb-0ead0451d3093b6e1",
            "id": "rtb-0ead0451d3093b6e1",
            "owner_id": "549815925956",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04bd2940fe9ca0d29",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "-private"
            },
            "tags_all": {
              "Name": "-private"
            },
            "vpc_id": "vpc-01de855f60a41bce2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.ngw",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:route-table/rtb-03495367eb59cdfc9",
            "id": "rtb-03495367eb59cdfc9",
            "owner_id": "549815925956",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e3024a428f072dfe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "-public"
            },
            "tags_all": {
              "Name": "-public"
            },
            "vpc_id": "vpc-01de855f60a41bce2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet1_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba1ee484e4d7308a",
            "route_table_id": "rtb-0ead0451d3093b6e1",
            "subnet_id": "subnet-0833afa9161c6793a"
          },
          "dependencies": [
            "module.network.aws_nat_gateway.ngw",
            "module.network.aws_route_table.route_table_private",
            "module.network.aws_subnet.private_subnet1",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_vpc.main",
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet2_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f78139f96fca417",
            "route_table_id": "rtb-0ead0451d3093b6e1",
            "subnet_id": "subnet-0b69d345c39f55481"
          },
          "dependencies": [
            "module.network.aws_subnet.private_subnet2",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_vpc.main",
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.ngw",
            "module.network.aws_route_table.route_table_private"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet1_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059b4558ae176e1c5",
            "route_table_id": "rtb-03495367eb59cdfc9",
            "subnet_id": "subnet-0eb04213026b42bce"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.route_table_public",
            "module.network.aws_subnet.public_subnet1",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet2_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fffced556b810f6",
            "route_table_id": "rtb-03495367eb59cdfc9",
            "subnet_id": "subnet-06e2558f3b1cfa429"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.route_table_public",
            "module.network.aws_subnet.public_subnet2",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_default_sec_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:security-group/sg-0b88003c6dc90725d",
            "description": "Allow inbound http(s) and ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b88003c6dc90725d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-main-sec-group",
            "name_prefix": "",
            "owner_id": "549815925956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-main-sec-group"
            },
            "tags_all": {
              "Name": "alb-main-sec-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-01de855f60a41bce2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:security-group/sg-0c7d4a570559a1b2e",
            "description": "Allow inbound http(s) and ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7d4a570559a1b2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b88003c6dc90725d"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "116.74.177.35/32",
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default-http-ssh",
            "name_prefix": "",
            "owner_id": "549815925956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-http-ssh"
            },
            "tags_all": {
              "Name": "default-http-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-01de855f60a41bce2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.alb_default_sec_grp",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:security-group/sg-09400b17f2ca2a5b7",
            "description": "Allow inbound http(s) and ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09400b17f2ca2a5b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private-http-ssh",
            "name_prefix": "",
            "owner_id": "549815925956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-http-ssh"
            },
            "tags_all": {
              "Name": "private-http-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-01de855f60a41bce2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sec_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:security-group/sg-0fba45d0588bad8ae",
            "description": "Allow inbound http(s) and ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fba45d0588bad8ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-sec-group",
            "name_prefix": "",
            "owner_id": "549815925956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sec-group"
            },
            "tags_all": {
              "Name": "rds-sec-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-01de855f60a41bce2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:subnet/subnet-0833afa9161c6793a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0833afa9161c6793a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "549815925956",
            "tags": {
              "Name": "-private-1"
            },
            "tags_all": {
              "Name": "-private-1"
            },
            "vpc_id": "vpc-01de855f60a41bce2"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:subnet/subnet-0b69d345c39f55481",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0b69d345c39f55481",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "549815925956",
            "tags": {
              "Name": "-private-2"
            },
            "tags_all": {
              "Name": "-private-2"
            },
            "vpc_id": "vpc-01de855f60a41bce2"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:subnet/subnet-0eb04213026b42bce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0eb04213026b42bce",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "549815925956",
            "tags": {
              "Name": "-public-1"
            },
            "tags_all": {
              "Name": "-public-1"
            },
            "vpc_id": "vpc-01de855f60a41bce2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:subnet/subnet-06e2558f3b1cfa429",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-06e2558f3b1cfa429",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "549815925956",
            "tags": {
              "Name": "-public-2"
            },
            "tags_all": {
              "Name": "-public-2"
            },
            "vpc_id": "vpc-01de855f60a41bce2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:549815925956:vpc/vpc-01de855f60a41bce2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05fbf6792ac270d15",
            "default_route_table_id": "rtb-0e72b67e4293eac2e",
            "default_security_group_id": "sg-0af7d8ac21bb1e367",
            "dhcp_options_id": "dopt-ccc7f6b6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01de855f60a41bce2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e72b67e4293eac2e",
            "owner_id": "549815925956",
            "tags": {
            },
            "tags_all": {
            }
          }
        }
      ]
    }
  ]
}